Bugs Fixed in Groupings...