@@ -7,7 +7,6 @@ package net.sourceforge.fenixedu.applicationTier.strategy.groupEnrolment.strateg
 import net.sourceforge.fenixedu.domain.IGrouping;
 import net.sourceforge.fenixedu.domain.IShift;
 import net.sourceforge.fenixedu.domain.IStudentGroup;
-import net.sourceforge.fenixedu.persistenceTier.ExcepcaoPersistencia;
 
 /**
  * @author asnr and scpo
@@ -22,14 +21,13 @@ public class IndividualGroupEnrolmentStrategy extends GroupEnrolmentStrategy imp
     }
 
     public Integer enrolmentPolicyNewGroup(IGrouping groupProperties, int numberOfStudentsToEnrole,
-            IShift shift) throws ExcepcaoPersistencia {
+            IShift shift) {
 
         if (checkNumberOfGroups(groupProperties, shift)) {
-            return new Integer(1);
+            return Integer.valueOf(1);
         }
 
-        return new Integer(-1);
-
+        return Integer.valueOf(-1);
     }
 
     public boolean checkNumberOfGroupElements(IGrouping groupProperties, IStudentGroup studentGroup) {
